--- a/simon.html
+++ b/simon.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Simon Dice</title>
+    <title>Simon Dice - EdinF</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="simon.css">
 </head>
