--- a/simon.html
+++ b/simon.html
@@ -3,6 +3,7 @@
     <title>Simon Dice - EdinF</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="simon.css">
+    <meta charset="utf-8"/>
 </head>
 <body>
 <div class="keyboard">
@@ -39,9 +40,84 @@
         <div class="key" data-key="77">m</div>
     </div>
 </div>
+<script src="node_modules/sweetalert/dist/sweetalert.min.js" charset="utf-8"></script>
 <script>
-    const niveles = 15
-    let teclas = generarTeclas(niveles)
+    // import swal from 'sweetalert';
+    const niveles = 15;
+    let teclas = generarTeclas(niveles);
+
+    function siguienteNivel(nivelActual) {
+        if (nivelActual == niveles) {
+            // return alert("Ganaste")
+            return swal({
+                title: "Ganaste!",
+                icon: "success",
+            });
+        }
+        // alert(`Nivel ${nivelActual + 1}`);
+        swal({
+            text: `Nivel ${nivelActual + 1}`,
+            buttons: false,
+            timer: 1500
+        });
+
+        for (let i = 0; i <= nivelActual; i++) {
+            // Primera tecla espera:
+            // 1.- 2000
+            // 2.- 3000
+            // 3.- 4000
+            // 3.- 5000
+            setTimeout(() => activate(teclas[i]), (1000 * (i + 1)) + 1000)
+        }
+        let i = 0;
+        let teclaActual = teclas[i];
+        window.addEventListener('keydown', onkeydown)
+
+        function onkeydown(ev) {
+            if (ev.keyCode == teclaActual) {
+                activate(teclaActual, {success: true});
+                i++;
+                if (i > nivelActual) {
+                    window.removeEventListener('keydown', onkeydown)
+                    setTimeout(() => siguienteNivel(i), 1500);
+                }
+                teclaActual = teclas[i];
+            } else {
+                activate(ev.keyCode, {fail: true});
+                window.removeEventListener('keydown', onkeydown);
+                // setTimeout(() => alert('Perdiste :('), 1000);
+                setTimeout(() => {
+                    swal({
+                        title: '¡Perdiste!',
+                        text: '¿Quieres jugar de nuevo?',
+                        buttons: ["No", "Si"]
+                    })
+                        .then((respuesta) => {
+                            if (respuesta) {
+                                teclas = generarTeclas(niveles);
+                                // console.log(teclas);
+                                siguienteNivel(0);
+                            } else {
+                                swal("Gracias por Jugar!");
+                            }
+                        })
+                }, 1000);
+
+            // setTimeout(() => {
+            //     swal({
+            //         title: 'Perdiste!',
+            //         test: '¿Quieres jugar de nuevo?'
+            //         // showCancelButton: true,
+            //         // confirmButtonText: 'Sí',
+            //         // cancelButtonText: 'No',
+            //         // closeOnConfirm: true
+            //     })
+            // }, 1000);
+        }
+    }
+    }
+
+    siguienteNivel(0);
 
     function generarTeclas(niveles) {
         return new Array(niveles).fill(0).map(generarTeclaAleatoria)
